# use-id

./: CHANGELOG.md  CONTRIBUTING.md  CRATE_TEMPLATE.md  Cargo.toml  FORGES.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  RELEASE.md  RELEASING.md  release-plz.toml
.devcontainer/: devcontainer.json
.github/workflows/: facade-publish-readiness.yml  publish-readiness.yml  release-plz-release.yml  sbom.yml
crates/use-id/: Cargo.toml  README.md
crates/use-id-prefix/: Cargo.toml  README.md
crates/use-id-prefix/examples/: basic_usage.rs
crates/use-id-prefix/src/: lib.rs  prelude.rs
crates/use-id-prefix/tests/: basic_usage.rs
crates/use-id/examples/: facade_identifier_slug.rs
crates/use-id/src/: lib.rs  prelude.rs
crates/use-id/tests/: facade_feature_matrix.rs  facade_identifier.rs
crates/use-identifier/: Cargo.toml  README.md
crates/use-identifier/examples/: basic_usage.rs
crates/use-identifier/src/: lib.rs  prelude.rs
crates/use-identifier/tests/: basic_usage.rs
crates/use-slug/: Cargo.toml  README.md
crates/use-slug/examples/: basic_usage.rs
crates/use-slug/src/: lib.rs  prelude.rs
crates/use-slug/tests/: basic_usage.rs
crates/use-stable-id/: Cargo.toml  README.md
crates/use-stable-id/examples/: basic_usage.rs
crates/use-stable-id/src/: lib.rs  prelude.rs
crates/use-stable-id/tests/: basic_usage.rs
crates/use-ulid/: Cargo.toml  README.md
crates/use-ulid/examples/: basic_usage.rs
crates/use-ulid/src/: lib.rs  prelude.rs
crates/use-ulid/tests/: basic_usage.rs
crates/use-uuid/: Cargo.toml  README.md
crates/use-uuid/examples/: basic_usage.rs
crates/use-uuid/src/: lib.rs  prelude.rs
crates/use-uuid/tests/: basic_usage.rs
docs/: devsecops.md  maintainer-release-flow.md
