[package]
name = "use-id-prefix"
description = "Prefixed identifier primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-id-prefix"
keywords = ["id", "prefix", "parse", "format", "typed"]
categories = ["data-structures", "rust-patterns"]

[[example]]
name = "use-id-prefix-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
