[package]
name = "use-identifier"
description = "Composable string-backed identifier primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-identifier"
keywords = ["id", "identifier", "typed", "string", "validation"]
categories = ["data-structures", "rust-patterns"]

[[example]]
name = "use-identifier-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
