[package]
name = "use-id-slug"
description = "Composable human-readable slug primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-id-slug"
keywords = ["slug", "id", "text", "normalize", "validate"]
categories = ["text-processing", "rust-patterns"]

[lib]
name = "use_slug"

[[example]]
name = "use-slug-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
