[package]
name = "use-stable-id"
description = "Deterministic stable identifier primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-stable-id"
keywords = ["id", "stable", "deterministic", "hash", "reference"]
categories = ["data-structures", "encoding"]

[[example]]
name = "use-stable-id-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
