[package]
name = "use-ulid"
description = "Thin ULID parsing and formatting primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-ulid"
keywords = ["ulid", "id", "parse", "format", "validate"]
categories = ["data-structures", "encoding"]

[dependencies]
ulid.workspace = true

[[example]]
name = "use-ulid-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
