[package]
name = "use-uuid"
description = "Thin UUID parsing and formatting primitives for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-uuid"
keywords = ["uuid", "id", "parse", "format", "validate"]
categories = ["data-structures", "encoding"]

[dependencies]
uuid.workspace = true

[[example]]
name = "use-uuid-basic-usage"
path = "examples/basic_usage.rs"

[lints]
workspace = true
